--- a/index-de.html
+++ b/index-de.html
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
   <!-- SEO Meta Tags -->
-  <meta name="description" content="Mobile app HTML landing page template to help you build a great online presence for your app which will convert visitors into users">
-  <meta name="author" content="Inovatik">
+  <meta name="description" content="Valkyrie is an App to build scenarios/quests and share them with players around the world. Both Mnsions of Madness Second Edition and Descent are supported and scenarios can be available in multiple languages, localized by the community.">
 
   <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
 	<meta property="og:site_name" content="" /> <!-- website name -->
@@ -323,8 +322,8 @@
                     <li>Mansions of Madness Second Edition erfordert die <a href="http://store.steampowered.com/app/478980/" target="_blank">Villen des Wahnsinns</a> app.</li>
                     <li>Descent: Die Reise ins Dunkel (Zweite Edition) erfordert die <a href="http://store.steampowered.com/app/477200/" target="_blank">Descent: Weg zum Ruhm</a> app.</li>
                   </ul>
-                  <a id="valkyrieWindowsZip" class="btn-solid-reg popup-with-move-anim">Neuste Version als .zip herunterladen</a>
-                  <a id="valkyrieWindowsExe" class="btn-solid-reg popup-with-move-anim">Neuste Version als .exe herunterladen</a>
+                  <a id="valkyrieWindowsZip" class="btn-solid-reg" rel="external nofollow" target="_blank">Neuste Version als .zip herunterladen</a>
+                  <a id="valkyrieWindowsExe" class="btn-solid-reg" rel="external nofollow" target="_blank">Neuste Version als .exe herunterladen</a>
               </div> <!-- end of text-container -->
             </div> <!-- end of col -->
           </div> <!-- end of row -->
@@ -353,7 +352,7 @@
                 <p>Wenn Sie einen schwarzen Bildschirm erhalten, gehen Sie bitte zu den App-Einstellungen und überprüfen Sie, ob der Zugriff auf den Systemspeicher eingeschaltet ist.</p>
 
                 <p>Wenn der Import fehlschlägt, stellen Sie sicher, dass Sie genügend internen Speicherplatz zur Verfügung haben. Jeder Spieltyp erfordert bis zu 300 MB. Um besonders sicher zu gehen, sollten Sie 1 GB freien Speicherplatz zur Verfügung haben.</p>
-                <a id="valkyrieAndroid" class="btn-solid-reg popup-with-move-anim">Neuste Version herunterladen</a>
+                <a id="valkyrieAndroid" class="btn-solid-reg" rel="external nofollow" target="_blank">Neuste Version herunterladen</a>
               </div> <!-- end of text-container -->
             </div> <!-- end of col -->
             <div class="col-lg-3">
@@ -380,7 +379,7 @@
                   <p>2. Die App wird als Ausnahme zu Ihren Sicherheitseinstellungen gespeichert, und Sie können sie in Zukunft wie jede andere registrierte App durch einen Doppelklick öffnen.</p>
                   <p>Falls der Import nicht abgeschlossen werden kann, versuchen Sie bitte, Walküre mit erhöhten Privilegien auszuführen.</p>
                   <p>Stellen Sie außerdem sicher, dass Sie Ordner-Berechtigungen haben. Verschieben Sie Ihren Valkyrie-Download in den Ordner Programme innerhalb der Finder-Anwendung. Führen Sie dann chmod +x /Applications/Valkyrie.app/Inhalte/MacOS/Valkyrie in der Terminal-Anwendung aus.</p>
-                  <a id="valkyrieMacos" class="btn-solid-reg popup-with-move-anim">Neueste Version herunterladen</a>
+                  <a id="valkyrieMacos" class="btn-solid-reg" rel="external nofollow" target="_blank">Neueste Version herunterladen</a>
               </div> <!-- end of text-container -->
             </div> <!-- end of col -->
           </div> <!-- end of row -->
@@ -399,7 +398,7 @@
                 <p>1. Inhalte kopieren/&lt;tippen sie&gt;/ffg von einem anderen importierten Speicherort</p>
                 <p>2. Führen sie -import &lt;Speicherort aus&gt;, wobei &lt;Speicherort&gt; der Ort ist, an dem Ihre Wege zum Ruhm oder Villen des Wahnsinns Dateien liegen.</p> 
                 <p>Zum Beispiel /home/ &lt;Benutzername&lt; /.local/share/Steam/steamapps/common/Descent Road to Legend für Wege zum Ruhm.</p>
-                <a id="valkyrieLinux" class="btn-solid-reg popup-with-move-anim">Neueste Version herunterladen</a>
+                <a id="valkyrieLinux" class="btn-solid-reg" rel="external nofollow" target="_blank">Neueste Version herunterladen</a>
               </div> <!-- end of text-container -->
             </div> <!-- end of col -->
             <div class="col-lg-3">
@@ -429,7 +428,7 @@
                 <p><b>Wege zum Ruhm</b>: com.fantasyflightgames.rtl/ main.459.com.fantasyflightgames.rtl.obb</p>
 
                 <p>Aktivieren Sie "Unbekannte Quellen" unter Einstellungen → Sicherheit → Unbekannte Quellen. Kopieren Sie die valkyrie APK-Datei auf Ihr Gerät. Führen Sie das Valkyrie APK zur Installation aus. Nach der Installation finden Sie eine Anwendung namens "Valkyrie" in Ihrer Liste der Anwendungen. Führen Sie sie aus. Lassen Sie alle Berechtigungen zu, die die Anwendung anfordert. Klicken Sie auf die Schaltfläche "Importieren" innerhalb der Walküre-Anwendung. Der Import kann eine Weile dauern. Nach dem Import sind Sie in der Lage, den gewünschten Spieltyp auszuführen.</p>
-                <a id="valkyrieAndroid2" class="btn-solid-reg popup-with-move-anim">Neueste Version herunterladen</a>
+                <a id="valkyrieAndroid2" class="btn-solid-reg" rel="external nofollow" target="_blank">Neueste Version herunterladen</a>
               </div> <!-- end of text-container -->
             </div> <!-- end of col -->
           </div> <!-- end of row -->
@@ -501,13 +500,13 @@
                     }
                 });
 
-                $('#valkyrieAndroid2').attr('href', valkyrieAndroid);
-                $('#valkyrieAndroid').attr('href', valkyrieAndroid);
-                $('#valkyrieLinux').attr('href', valkyrieLinux);
-                $('#valkyrieMacos').attr('href', valkyrieMacos);
-                $('#valkyrieWindows7z').attr('href', valkyrieWindows7z);
-                $('#valkyrieWindowsExe').attr('href', valkyrieWindowsExe);
-                $('#valkyrieWindowsZip').attr('href', valkyrieWindowsZip);
+                $('#valkyrieAndroid2').prop('href', valkyrieAndroid);
+                $('#valkyrieAndroid').prop('href', valkyrieAndroid);
+                $('#valkyrieLinux').prop('href', valkyrieLinux);
+                $('#valkyrieMacos').prop('href', valkyrieMacos);
+                $('#valkyrieWindows7z').prop('href', valkyrieWindows7z);
+                $('#valkyrieWindowsExe').prop('href', valkyrieWindowsExe);
+                $('#valkyrieWindowsZip').prop('href', valkyrieWindowsZip);
             });
         });
     </script>
