--- a/index-es.html
+++ b/index-es.html
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
   <!-- SEO Meta Tags -->
-  <meta name="description" content="Mobile app HTML landing page template to help you build a great online presence for your app which will convert visitors into users">
-  <meta name="author" content="Inovatik">
+  <meta name="description" content="Valkyrie is an App to build scenarios/quests and share them with players around the world. Both Mnsions of Madness Second Edition and Descent are supported and scenarios can be available in multiple languages, localized by the community.">
 
   <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
 	<meta property="og:site_name" content="" /> <!-- website name -->
@@ -323,8 +322,8 @@
                     <li>Mansiones de la locura, segunda edición, necesita la aplicación de Mansiones de la locura <a href="http://store.steampowered.com/app/478980/" target="_blank"></a>.</li>
                     <li>Descent: Viaje a las tinieblas (segunda edición) necesita la aplicación Descent: Road to Legend <a href="http://store.steampowered.com/app/477200/" target="_blank">.</a></li>
                   </ul>
-                  <a id="valkyrieWindowsZip" class="btn-solid-reg popup-with-move-anim">Descargar el último ZIP</a>
-                  <a id="valkyrieWindowsExe" class="btn-solid-reg popup-with-move-anim">Descargar el último EXE</a>
+                  <a id="valkyrieWindowsZip" class="btn-solid-reg" rel="external nofollow" target="_blank">Descargar el último ZIP</a>
+                  <a id="valkyrieWindowsExe" class="btn-solid-reg" rel="external nofollow" target="_blank">Descargar el último EXE</a>
               </div> <!-- end of text-container -->
             </div> <!-- end of col -->
           </div> <!-- end of row -->
@@ -353,7 +352,7 @@
                 <p>If you get a black screen, please go to app settings and check that storage permissions are on.</p>
 
                 <p>If the import fails, make sure you have enough internal storage space available. Each game type requires up to 300 MB. To be extra sure, have 1 GB of free space available.</p>
-                <a id="valkyrieAndroid" class="btn-solid-reg popup-with-move-anim">Download Latest</a>
+                <a id="valkyrieAndroid" class="btn-solid-reg" rel="external nofollow" target="_blank">Download Latest</a>
               </div> <!-- end of text-container -->
             </div> <!-- end of col -->
             <div class="col-lg-3">
@@ -381,7 +380,7 @@
                   <p>2. The app is saved as an exception to your security settings, and you can open it in the future by double-clicking it just as you can any registered app.</p>
                   <p>If importing does not complete, please attempt to run Valkyrie at elevated privileges.</p>
                   <p>Also make sure, you have folder permissions. Move your Valkyrie download to the folder Applications inside the Finder app. Then run chmod +x /Applications/Valkyrie.app/Contents/MacOS/Valkyrie in the Terminal app.</p>
-                  <a id="valkyrieMacos" class="btn-solid-reg popup-with-move-anim">Download Latest</a>
+                  <a id="valkyrieMacos" class="btn-solid-reg" rel="external nofollow" target="_blank">Download Latest</a>
               </div> <!-- end of text-container -->
             </div> <!-- end of col -->
           </div> <!-- end of row -->
@@ -400,7 +399,7 @@
                 <p>1. Copy content/&lt;type&gt;/ffg from another imported installation or</p>
                 <p>2. Run with -import &lt;location&gt; where &lt;location&gt; is Road to Legend or Mansions of Madness data.</p> 
                 <p>For example /home/ &lt;username&gt; /.local/share/Steam/steamapps/common/Descent Road to Legend for Road to Legend.</p>
-                <a id="valkyrieLinux" class="btn-solid-reg popup-with-move-anim">Download Latest</a>
+                <a id="valkyrieLinux" class="btn-solid-reg" rel="external nofollow" target="_blank">Download Latest</a>
               </div> <!-- end of text-container -->
             </div> <!-- end of col -->
             <div class="col-lg-3">
@@ -430,7 +429,7 @@
                 <p><b>Road to Legend</b>: com.fantasyflightgames.rtl/ main.459.com.fantasyflightgames.rtl.obb</p>
 
                 <p>Enable "Unknown Sources" under Settings → Security → Unknown Sources. Copy the valkyrie APK file to your device. Run the valkyrie APK to install. After the install, you will find an app named "Valkyrie" in your list of apps. Run it. Allow all permissions the app requests. Press the "Import" button inside the Valkyrie app. The import might take a while. After the import you are able to run the desired game type.</p>
-                <a id="valkyrieAndroid2" class="btn-solid-reg popup-with-move-anim">Download Latest</a>
+                <a id="valkyrieAndroid2" class="btn-solid-reg" rel="external nofollow" target="_blank">Download Latest</a>
               </div> <!-- end of text-container -->
             </div> <!-- end of col -->
           </div> <!-- end of row -->
@@ -502,13 +501,13 @@
                     }
                 });
 
-                $('#valkyrieAndroid2').attr('href', valkyrieAndroid);
-                $('#valkyrieAndroid').attr('href', valkyrieAndroid);
-                $('#valkyrieLinux').attr('href', valkyrieLinux);
-                $('#valkyrieMacos').attr('href', valkyrieMacos);
-                $('#valkyrieWindows7z').attr('href', valkyrieWindows7z);
-                $('#valkyrieWindowsExe').attr('href', valkyrieWindowsExe);
-                $('#valkyrieWindowsZip').attr('href', valkyrieWindowsZip);
+                $('#valkyrieAndroid2').prop('href', valkyrieAndroid);
+                $('#valkyrieAndroid').prop('href', valkyrieAndroid);
+                $('#valkyrieLinux').prop('href', valkyrieLinux);
+                $('#valkyrieMacos').prop('href', valkyrieMacos);
+                $('#valkyrieWindows7z').prop('href', valkyrieWindows7z);
+                $('#valkyrieWindowsExe').prop('href', valkyrieWindowsExe);
+                $('#valkyrieWindowsZip').prop('href', valkyrieWindowsZip);
             });
         });
     </script>
