--- a/index-pl.html
+++ b/index-pl.html
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
   <!-- SEO Meta Tags -->
-  <meta name="description" content="Mobile app HTML landing page template to help you build a great online presence for your app which will convert visitors into users">
-  <meta name="author" content="Inovatik">
+  <meta name="description" content="Valkyrie is an App to build scenarios/quests and share them with players around the world. Both Mnsions of Madness Second Edition and Descent are supported and scenarios can be available in multiple languages, localized by the community.">
 
   <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
 	<meta property="og:site_name" content="" /> <!-- website name -->
@@ -323,8 +322,10 @@
                     <li>Posiadłość Szaleństwa druga edycja wymaga aplikacji <a href="http://store.steampowered.com/app/478980/" target="_blank">Posiadłość Szaleństwa</a>.</li>
                     <li>Descent: Wędrówki w mroku (Druga Edycja) wymaga aplikacji <a href="http://store.steampowered.com/app/477200/" target="_blank">Descent: Droga do Legendy</a>.</li>
                   </ul>
-                  <a id="valkyrieWindowsZip" class="btn-solid-reg popup-with-move-anim">Pobierz najnowszy ZIP</a>
-                  <a id="valkyrieWindowsExe" class="btn-solid-reg popup-with-move-anim">Pobiesz najnowszy EXE</a>
+
+                  <a id="valkyrieWindowsZip" class="btn-solid-reg" rel="external nofollow" target="_blank">Pobierz najnowszy ZIP</a>
+                  <a id="valkyrieWindowsExe" class="btn-solid-reg" rel="external nofollow" target="_blank">Pobiesz najnowszy EXE</a>
+
               </div> <!-- end of text-container -->
             </div> <!-- end of col -->
           </div> <!-- end of row -->
@@ -353,7 +354,9 @@
                 <p>Jeżeli ekran pozostaje czarny sprawdź w ustawieniach aplikacji czy została udzielona zgoda na dostęp do plików.</p>
 
                 <p>Jeżeli import zakończy się niepowodzeniem, sprawdź czy posiadasz wystarczającą ilość wolnego miejsca we wbudowanej pamięci. Każda z gier wymaga do 300 MB. Dla pewności warto mieć ok. 1GB wolnego miejsca.</p>
-                <a id="valkyrieAndroid" class="btn-solid-reg popup-with-move-anim">Pobierz</a>
+
+                <a id="valkyrieAndroid" class="btn-solid-reg" rel="external nofollow" target="_blank">Pobierz</a>
+
               </div> <!-- end of text-container -->
             </div> <!-- end of col -->
             <div class="col-lg-3">
@@ -380,7 +383,9 @@
                   <p>2. Aplikacja została zapisana jako wyjątek w ustawieniach zabezpieczeń i w przyszłości możesz ją otworzyć przez podwójne kliknięcie tak jak inne zarejestrowane aplikacje.</p>
                   <p>Jeżeli importowanie się nie zakończy, spróbuj uruchomić Valkyrie używając wyższego poziomu uprawnień.</p>
                   <p>Sprawdź też czy posiadasz uprawnienia dostępu do folderów. Przenieś ściągnięty plik Valkyrie do folderu Applications w aplikacji Finder. Następnie uruchom chmod +x/Applications/Valkyrie.app/Contents/MacOS/Valkyrie w aplikacji Terminal.</p>
-                  <a id="valkyrieMacos" class="btn-solid-reg popup-with-move-anim">Pobierz</a>
+
+                  <a id="valkyrieMacos" class="btn-solid-reg" rel="external nofollow" target="_blank">Pobierz</a>
+
               </div> <!-- end of text-container -->
             </div> <!-- end of col -->
           </div> <!-- end of row -->
@@ -399,7 +404,9 @@
                 <p>1. Skopiować zawartość /&lt;type&gt;/ffg z innej zaimportowanej aplikacji lub</p>
                 <p>2. Uruchomić -import &lt;location&gt; gdzie &lt;location&gt; to Road to Legend lub Mansions of Madness data.</p> 
                 <p>Na przykład /home/ &lt;username&gt; /.local/share/Steam/steamapps/common/Descent Road to Legend dla Drogi do Legendy.</p>
-                <a id="valkyrieLinux" class="btn-solid-reg popup-with-move-anim">Pobierz</a>
+
+                <a id="valkyrieLinux" class="btn-solid-reg" rel="external nofollow" target="_blank">Pobierz</a>
+
               </div> <!-- end of text-container -->
             </div> <!-- end of col -->
             <div class="col-lg-3">
@@ -430,7 +437,8 @@
 
                 <p>Włącz "Nieznane Źródła" w Ustawienia → Zabezpieczenia → Nieznane Źródła. Skopiuj plik Valkyrie APK na swoje urządzenie. Uruchom i zainstaluj Valkyrie APK. Po zakończeniu instalacji "Valkyrie" pojawi się na liście aplikacji. Uruchom ją. Udziel aplikacji wymaganych zezwoleń. Wciśnij przycisk "Zaimportuj". Proces może potrwać dłuższą chwilę. Po zakończeniu importu możesz wybrać i rozpocząć grę.</p>
 
-                <a id="valkyrieAndroid2" class="btn-solid-reg popup-with-move-anim">Pobierz</a>
+                <a id="valkyrieAndroid2" class="btn-solid-reg" rel="external nofollow" target="_blank">Pobierz</a>
+
               </div> <!-- end of text-container -->
             </div> <!-- end of col -->
           </div> <!-- end of row -->
@@ -502,13 +510,14 @@
                     }
                 });
 
-                $('#valkyrieAndroid2').attr('href', valkyrieAndroid);
-                $('#valkyrieAndroid').attr('href', valkyrieAndroid);
-                $('#valkyrieLinux').attr('href', valkyrieLinux);
-                $('#valkyrieMacos').attr('href', valkyrieMacos);
-                $('#valkyrieWindows7z').attr('href', valkyrieWindows7z);
-                $('#valkyrieWindowsExe').attr('href', valkyrieWindowsExe);
-                $('#valkyrieWindowsZip').attr('href', valkyrieWindowsZip);
+                $('#valkyrieAndroid2').prop('href', valkyrieAndroid);
+                $('#valkyrieAndroid').prop('href', valkyrieAndroid);
+                $('#valkyrieLinux').prop('href', valkyrieLinux);
+                $('#valkyrieMacos').prop('href', valkyrieMacos);
+                $('#valkyrieWindows7z').prop('href', valkyrieWindows7z);
+                $('#valkyrieWindowsExe').prop('href', valkyrieWindowsExe);
+                $('#valkyrieWindowsZip').prop('href', valkyrieWindowsZip);
+
             });
         });
     </script>
