--- a/index-pt.html
+++ b/index-pt.html
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
   <!-- SEO Meta Tags -->
-  <meta name="description" content="Mobile app HTML landing page template to help you build a great online presence for your app which will convert visitors into users">
-  <meta name="author" content="Inovatik">
+  <meta name="description" content="Valkyrie is an App to build scenarios/quests and share them with players around the world. Both Mnsions of Madness Second Edition and Descent are supported and scenarios can be available in multiple languages, localized by the community.">
 
   <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
 	<meta property="og:site_name" content="" /> <!-- website name -->
@@ -323,8 +322,10 @@
                   <li>Mansions of Madness Second Edition precisa do <a href="http://store.steampowered.com/app/478980/" target="_blank">Mansions of Madness</a> app.</li>
                   <li>Descent: Journeys in the Dark (Second Edition) precisa do <a href="http://store.steampowered.com/app/477200/" target="_blank">Descent: Road to Legend</a> app.</li>
                 </ul>
-                <a id="valkyrieWindowsZip" class="btn-solid-reg popup-with-move-anim">Download Último ZIP</a>
-                <a id="valkyrieWindowsExe" class="btn-solid-reg popup-with-move-anim">Download Último EXE</a>
+
+                <a id="valkyrieWindowsZip" class="btn-solid-reg" rel="external nofollow" target="_blank">Download Último ZIP</a>
+                <a id="valkyrieWindowsExe" class="btn-solid-reg" rel="external nofollow" target="_blank">Download Último EXE</a>
+
               </div> <!-- end of text-container -->
             </div> <!-- end of col -->
           </div> <!-- end of row -->
@@ -353,7 +354,9 @@
                 <p>Se você ver apenas uma tela preta, vá até as configurações do aplicativo e verifique se as permissões de armazenamento estão habilitadas.</p>
 
                 <p>Se a importação falhar, verifique se você tem espaço suficiente. Cada jogo precisa de até 300 MB. Para garantir, tenha 1 GB de espaço livre.</p>
-                <a id="valkyrieAndroid" class="btn-solid-reg popup-with-move-anim">Download Último</a>
+
+                <a id="valkyrieAndroid" class="btn-solid-reg" rel="external nofollow" target="_blank">Download Último</a>
+
               </div> <!-- end of text-container -->
             </div> <!-- end of col -->
             <div class="col-lg-3">
@@ -381,7 +384,9 @@
                 <p>2. O app está salvo como uma exceção em suas configurações de segurança, e você pode abrir no futuro clicando duas vezes, como qualquer outro aplicativo.</p>
                 <p>Se a importação não for completa tente rodar Valkyrie como mais permissões.</p>
                 <p>Além disso, garanta que você não tem nenhuma permissão na pasta. Mova seu download fo Valkyrie para a pasta Applications dentro do Finder. Então execute no terminal "chmod +x /Applications/Valkyrie.app/Contents/MacOS/Valkyrie"</p>
-                <a id="valkyrieMacos" class="btn-solid-reg popup-with-move-anim">Download Último</a>
+
+                <a id="valkyrieMacos" class="btn-solid-reg" rel="external nofollow" target="_blank">Download Último</a>
+
               </div> <!-- end of text-container -->
             </div> <!-- end of col -->
           </div> <!-- end of row -->
@@ -399,7 +404,9 @@
                 <p>Para o Linux também não há importação automática:</p>
                 <p>1. Copie content/&lt;type&gt;/ffg para outra instalação or</p>
                 <p>2. Rode com -import &lt;location&gt; where &lt;location&gt; é Road to Legend ou Mansions of Madness data. Exemplo /home/&lt;username&gt; /.local/share/Steam/steamapps/common/Descent Road to Legend for Road to Legend.</p>
-                <a id="valkyrieLinux" class="btn-solid-reg popup-with-move-anim">Download Último</a>
+
+                <a id="valkyrieLinux" class="btn-solid-reg" rel="external nofollow" target="_blank">Download Último</a>
+
               </div> <!-- end of text-container -->
             </div> <!-- end of col -->
             <div class="col-lg-3">
@@ -429,7 +436,9 @@
                 <p><b>Road to Legend</b>: com.fantasyflightgames.rtl/ main.459.com.fantasyflightgames.rtl.obb</p>
 
                 <p>Habilite "Unknown Sources" (Fontes desconhecidas) em Settings → Security → Unknown Sources (Configurações → Segurança → Fontes Desconhecidas). Copie o APK do Valkyrie para seu dispositivo. Rode o APK para instalar. Depois da instalação, você vai enconotrar um App chamado "Valkyrie" em seus aplicativos. Rode. Permita todas as permissões que o App peça. Aperte o botão "Import" dentro do App do Valkyrie. A importação pode levar um tempo. Depois da importação ser concluída você pode selecionar qual jogo quer usar.</p>
-                <a id="valkyrieAndroid2" class="btn-solid-reg popup-with-move-anim">Download Último</a>
+
+                <a id="valkyrieAndroid2" class="btn-solid-reg" rel="external nofollow" target="_blank">Download Último</a>
+
               </div> <!-- end of text-container -->
             </div> <!-- end of col -->
           </div> <!-- end of row -->
@@ -501,13 +510,14 @@
                     }
                 });
 
-                $('#valkyrieAndroid2').attr('href', valkyrieAndroid);
-                $('#valkyrieAndroid').attr('href', valkyrieAndroid);
-                $('#valkyrieLinux').attr('href', valkyrieLinux);
-                $('#valkyrieMacos').attr('href', valkyrieMacos);
-                $('#valkyrieWindows7z').attr('href', valkyrieWindows7z);
-                $('#valkyrieWindowsExe').attr('href', valkyrieWindowsExe);
-                $('#valkyrieWindowsZip').attr('href', valkyrieWindowsZip);
+                $('#valkyrieAndroid2').prop('href', valkyrieAndroid);
+                $('#valkyrieAndroid').prop('href', valkyrieAndroid);
+                $('#valkyrieLinux').prop('href', valkyrieLinux);
+                $('#valkyrieMacos').prop('href', valkyrieMacos);
+                $('#valkyrieWindows7z').prop('href', valkyrieWindows7z);
+                $('#valkyrieWindowsExe').prop('href', valkyrieWindowsExe);
+                $('#valkyrieWindowsZip').prop('href', valkyrieWindowsZip);
+
             });
         });
     </script>
