--- a/index-pl.html
+++ b/index-pl.html
@@ -477,50 +477,7 @@
     <script src="web/js/morphext.min.js"></script> <!-- Morphtext rotating text in the header -->
     <script src="web/js/validator.min.js"></script> <!-- Validator.js - Bootstrap plugin that validates forms -->
     <script src="web/js/scripts.js"></script> <!-- Custom scripts -->
-
-    <script>
-        $(document).ready(function () {
-            fallbackDownloadUrl = "https://github.com/NPBruce/valkyrie/releases/latest";
-            valkyrieAndroid = fallbackDownloadUrl;
-            valkyrieLinux = fallbackDownloadUrl;
-            valkyrieMacos = fallbackDownloadUrl;
-            valkyrieWindowsExe = fallbackDownloadUrl;
-            valkyrieWindows7z = fallbackDownloadUrl;
-            valkyrieWindowsZip = fallbackDownloadUrl;
-
-            $.get('https://api.github.com/repos/NPBruce/valkyrie/releases/latest', function (data) {
-                $.each(data.assets, function(i, v) {
-                    if (v.name.toLowerCase().startsWith("valkyrie-android") == true){
-                        valkyrieAndroid = v.browser_download_url;
-                    }
-                    else if (v.name.toLowerCase().startsWith("valkyrie-linux") == true){
-                        valkyrieLinux = v.browser_download_url;
-                    }
-                    else if (v.name.toLowerCase().startsWith("valkyrie-macos") == true){
-                        valkyrieMacos = v.browser_download_url;
-                    }
-                    else if (v.name.toLowerCase().startsWith("valkyrie-windows") == true && v.name.toLowerCase().endsWith(".exe") == true){
-                        valkyrieWindowsExe = v.browser_download_url;
-                    }
-                    else if (v.name.toLowerCase().startsWith("valkyrie-windows") == true && v.name.toLowerCase().endsWith(".7z") == true){
-                        valkyrieWindows7z = v.browser_download_url;
-                    }
-                    else if (v.name.toLowerCase().startsWith("valkyrie-windows") == true && v.name.toLowerCase().endsWith(".zip") == true){
-                        valkyrieWindowsZip = v.browser_download_url;
-                    }
-                });
-
-                $('#valkyrieAndroid2').prop('href', valkyrieAndroid);
-                $('#valkyrieAndroid').prop('href', valkyrieAndroid);
-                $('#valkyrieLinux').prop('href', valkyrieLinux);
-                $('#valkyrieMacos').prop('href', valkyrieMacos);
-                $('#valkyrieWindows7z').prop('href', valkyrieWindows7z);
-                $('#valkyrieWindowsExe').prop('href', valkyrieWindowsExe);
-                $('#valkyrieWindowsZip').prop('href', valkyrieWindowsZip);
-
-            });
-        });
-    </script>
+    <script src="web/js/indexScripts.js"></script> <!-- additional scripts for this page (e.g. for generating download links) -->
 
   </body>
 </html>
